# FullaDB

./: .gitignore  CMakeLists.txt  README.md
fulla/include/fulla/bpt/: concepts.hpp  cursor.hpp  policies.hpp  ranges.hpp  tree.hpp
fulla/include/fulla/bpt/memory/: containter.hpp  model.hpp
fulla/include/fulla/bpt/paged/: model.hpp  settings.hpp
fulla/include/fulla/codec/: data_serializer.hpp  data_view.hpp  prop.hpp  prop_types.hpp  serializer.hpp
fulla/include/fulla/core/: assert.hpp  bitset.hpp  byteorder.hpp  bytes.hpp  concepts.hpp  debug.hpp  pack.hpp  static_vector.hpp  types.hpp
fulla/include/fulla/long_store/: concepts.hpp  handle.hpp
fulla/include/fulla/page/: bpt_inode.hpp  bpt_leaf.hpp  bpt_root.hpp  freed.hpp  header.hpp  long_store.hpp  metadata.hpp  page_view.hpp  radix_level.hpp  ranges.hpp  slab_store.hpp  slot_directory.hpp  slot_page.hpp  slots.hpp  subheaders.hpp  sys_page.hpp
fulla/include/fulla/page/slots/: concepts.hpp  directory.hpp  stable_directory.hpp
fulla/include/fulla/page_allocator/: base.hpp  concepts.hpp
fulla/include/fulla/radix_table/: concepts.hpp  trie.hpp
fulla/include/fulla/radix_table/memory/: model.hpp
fulla/include/fulla/radix_table/paged/: model.hpp
fulla/include/fulla/slab_store/: store.hpp
fulla/include/fulla/slots/: concepts.hpp  directory.hpp  stable_directory.hpp
fulla/include/fulla/storage/: block_device.hpp  buffer_manager.hpp  device.hpp  file_block_device.hpp  file_device.hpp  memory_block_device.hpp  memory_device.hpp  stats.hpp
fullafs/: main.cpp
fullafs/include/: core.hpp  directory_handle.hpp  directory_storage_handle.hpp  file_handle.hpp  fs_page_allocator.hpp  handle_base.hpp  key_values.hpp  page_headers.hpp  page_kinds.hpp  root.hpp
fullafs_tests/: main.cpp  test_directory_storage_handle.cpp  test_fs_page_allocator.cpp  test_fs_root.cpp  tests.hpp
tests/: test_bpt_create_dictionary.cpp  test_bpt_inode_model.cpp  test_bpt_leaf_model.cpp  test_bpt_memory.cpp  test_bpt_page_allocator.cpp  test_bpt_page_model.cpp  test_buffer_manager.cpp  test_byteorder.cpp  test_codec.cpp  test_data_view.cpp  test_file_device.cpp  test_long_storage.cpp  test_page_bpt_header.cpp  test_page_header.cpp  test_page_ranges.cpp  test_prop.cpp  test_radix_trie.cpp  test_serializer.cpp  test_slab_store.cpp  test_slot_directory.cpp  test_slot_page.cpp  tests.hpp
